Fixed word wrap issue for long artist names

--- a/public/stylesheets/userPage-grid.css
+++ b/public/stylesheets/userPage-grid.css
@@ -14,8 +14,8 @@
     grid-gap: 2vh;
   }
   .card {
-    display: grid;
-    grid-template-rows: auto;
+    /*display: grid;
+    grid-template-rows: auto;*/
     padding: 0;
     grid-template-areas: "band"
                           "source"           "venue"
@@ -23,6 +23,8 @@
     border-style: solid;
     border-width: 1px;
     border-color: white;
+    width: 90vw;
+    word-wrap: break-word;
     }
     .source {
       grid-template-areas: source;
